Digital/objects/Digital_Live_Users__c.object
<CustomObject>
    <label>Digital Live Users</label>
    <nameField>
        <displayFormat>LU-{0000000000}</displayFormat>
        <label>Digital Live Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Live Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Last_Poll_Time__c</fullName>
        <label>Last Poll Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Digital Live Users</relationshipLabel>
        <relationshipName>Digital_Live_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Digital_Live_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Layout__c</columns>
        <columns>Tab_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>